# level

./: .gitignore
agent/KitAgent/: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
agent/KitAgent/app/: config.py  main.py
agent/KitAgent/app/middleware/: requesttime.py
agent/KitAgent/app/models/: chat_context.py  chat_message.py  intent.py
agent/KitAgent/app/routers/: agent.py  client.html  health.py
agent/KitAgent/app/services/: agent_service.py  audio_service.py  chat_agent.py  chat_service.py  chat_state_machine.py  intent_classifier.py  websocket_chat_agent.py
agent/KitAgent/app/services/tts/volcengine/: binary.py
agent/KitAgent/app/services/workflows/: __init__.py  base_workflow.py  chat_workflow.py  funcall_workflow.py  music_workflow.py  reasoning_workflow.py  search_workflow.py
agent/KitAgent/app/utils/: logger.py
agent/KitAgent/doc/: chatagent.md
agent/KitAgent/tests/: test_workflows.py
turtle/: Dockerfile  README  pyproject.toml  pytest.ini  test_mcp_client.py
turtle/app/: __main__.py  cmdline.py  config.py  main.py
turtle/app/middleware/: traceid.py
turtle/app/models/: request.py
turtle/app/routers/: agent.py  stock.py
turtle/app/services/: agent_service.py  background_tasks.py  database.py  llm_agent.py  macd.py  notification.py  search_gold.py  search_macd_gold.py  sma.py
turtle/app/utils/: baostock_wrapper.py  ctxvars.py  logger.py  main_board_checker.py  traceid_filter.py
turtle/prom_grafana/: docker-compose.yml  prometheus.yml
