# 构建系统配置
# PEP 517 规定的构建系统配置，指定构建工具和后端
[build-system]
# 构建时需要的依赖
requires = ["hatchling"]
# 构建后端，使用 hatchling 替代传统的 setuptools
build-backend = "hatchling.build"

# 项目元数据配置
# PEP 621 规定的项目核心元数据
[project]
# 项目名称，将用于发布和安装
name = "myturtle"
# 项目版本，1.0.0 以上版本被视为正式发布版本
version = "0.1.0"
# 项目简介，不支持非英文字符
description = "股票数据查询服务和量化选股系统"
# README 文件路径，用于生成长描述
readme = "README.md"
# Python 版本要求
requires-python = ">=3.12"
# 许可证信息
license = { text = "MIT" }
# 作者信息列表
authors = [
    { name = "wangguosheng", email = "wgsmail@163.com" }
]
# 关键词，用于包索引和搜索
keywords = ["baidu", "demo"]
# 项目分类，用于 PyPI 分类（如果项目不打算开源可以忽略）
# 完整分类列表：https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
# 项目依赖列表
dependencies = [
    "build",
    "aiosqlite",
    "backtrader",
    "baostock",
    "dotenv",
    "fastapi[standard]",
    "prometheus_fastapi_instrumentator==7.1.0",
    "pydantic==2.11.7",
    "pydantic_settings==2.10.1",
    "python-dotenv==1.1.1",
    "starlette==0.47.2",
    "uvicorn==0.35.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "markdown",
    "langchain",
    "langchain-openai",
]

# 可选依赖配置，可通过 pip install package[test] 安装
[project.optional-dependencies]
# 测试相关依赖
test = [
    "pytest",
    "mock"
]

# 命令行入口点配置
[project.scripts]
# 格式：命令名 = 模块路径:函数名
myturtle = "app.cmdline:main"

# Hatch 构建工具配置
[tool.hatch.build]
# 要包含的 Python 包
packages = ["app"]
# 要包含的数据文件
# 支持通配符模式
include = [
    "app/conf/*",
    "app/data/*"
]

# wheel 包构建配置
[tool.hatch.build.targets.wheel]
# 指定要打包的 Python 包
packages = ["app"]
# wheel 包输出目录
output-dir = "output/dist"

# 源码包构建配置
[tool.hatch.build.targets.sdist]
# 源码包输出目录
output-dir = "output/dist"
