[project]
name = "kitagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
